--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
-                           <input type="text" class="form-control text-center" value="1">
-                           <button class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick="handleProductChange('phone', false)" class="btn btn-default"><i
+                                 class="fas fa-minus"></i></button>
+                           <input id="phone-count" type="text" class="form-control text-center" value="1">
+                           <button onclick="handleProductChange('phone', true)" class="btn btn-default"><i
+                                 class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$1219</h5>
+                        <h5 id='phone-total'>$1219</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -43,9 +45,11 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button onclick="handleProductChange('case',false)" class="btn btn-default"><i
+                                 class="fas fa-minus"></i></button>
                            <input id="case-count" type="text" class="form-control text-center" value="1">
-                           <button id="case-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick=" handleProductChange('case',true)" class="btn btn-default"><i
+                                 class="fas fa-plus"></i></button>
 
                         </div>
                         <h5 id="case-total">$59</h5>
@@ -78,15 +82,91 @@
       </div>
    </section>
    <script>
-      document.getElementById('case-increase').addEventListener('click',function(){
-         const caseInput = document.getElementById('case-count');
-         const caseCount = parseInt(caseInput.value);
-         const caseNewCount = caseCount + 1;
-         caseInput.value = caseNewCount;
 
-         const caseTotal = caseNewCount * 59;
-         document.getElementById('case-total').innerText = '$' + caseTotal;
-      }) 
+      function handleProductChange(product, isIncrease) {
+         const productInput = document.getElementById(product +'-count');
+         const productCount = parseInt(productInput.value);
+         let productNewCount = productCount;
+         if (isIncrease == true) {
+            productNewCount = productCount + 1;
+         }
+         if (isIncrease == false && productCount > 0) {
+            productNewCount = productCount - 1;
+         }
+         productInput.value = productNewCount;
+         // const caseTotal = caseNewCount * 59;
+         let productTotal = 0;
+         if(product == 'phone'){
+            productTotal = productNewCount * 1219;
+
+         }
+         if(product == 'case'){
+            productTotal = productNewCount *59;
+         }
+         document.getElementById(product +'-total').innerText = '$' + productTotal;
+      }
+
+
+      // function handlePhoneChange(isIncrease) {
+      //    const phoneInput = document.getElementById('phone-count');
+      //    const phoneCount = parseInt(phoneInput.value);
+      //    // const phoneNewCount = phoneCount - 1;
+      //    let phoneNewCount = phoneCount;
+      //    if (isIncrease == true) {
+      //       phoneNewCount = phoneCount + 1;
+      //    }
+      //    if (isIncrease == false && phoneCount > 0) {
+      //       phoneNewCount = phoneCount - 1;
+      //    }
+      //    phoneInput.value = phoneNewCount;
+      //    const phoneTotal = phoneNewCount * 1219;
+      //    document.getElementById('phone-total').innerText = '$' + phoneTotal;
+      // }
+
+      // function handleProductChange(isIncrease) {
+      //    const caseInput = document.getElementById('case-count');
+      //    const caseCount = parseInt(caseInput.value);
+      //    let caseNewCount = caseCount;
+      //    if (isIncrease == true) {
+      //       caseNewCount = caseCount + 1;
+      //    }
+      //    if (isIncrease == false && caseCount > 0) {
+      //       caseNewCount = caseCount - 1;
+      //    }
+      //    caseInput.value = caseNewCount;
+      //    const caseTotal = caseNewCount * 59;
+      //    document.getElementById('case-total').innerText = '$' + caseTotal;
+      // }
+
+
+
+
+
+
+
+
+
+
+
+
+
+      // document.getElementById('case-increase').addEventListener('click', function () {
+      //    const phoneInput = document.getElementById('case-count');
+      //    const phoneCount = parseInt(phoneInput.value);
+      //    const phoneNewCount = phoneCount + 1;
+      //    phoneInput.value = phoneNewCount;
+
+      //    const phoneTotal = phoneNewCount * 59;
+      //    document.getElementById('case-total').innerText = '$' + phoneTotal;
+      // });
+      // document.getElementById("case-decrease").addEventListener('click', function () {
+      //    const phoneInput = document.getElementById('case-count');
+      //    const phoneCount = parseInt(phoneInput.value);
+      //    const phoneNewCount = phoneCount - 1;
+      //    phoneInput.value = phoneNewCount;
+      //    const phoneTotal = phoneNewCount * 59;
+      //    document.getElementById('case-total').innerText = '$'+ phoneTotal;
+      // });
    </script>
 </body>
 
